This file lists interface changes that might affect users in 2.0.0, some 
known problems in LyX 2.0.0 and some things you have to take into account
when upgrading from earlier versions to a version of the 2.0.x series.
Note that fixes are available for some of these, but they have not yet
been applied because of incomplete testing.


Interface changes
-----------------

There have been some changes to the LyX command line. There is a new option 
"--batch" that causes LyX to run the given commands without opening a GUI 
window. Thus, something like:
    lyx --batch -x "buffer-print printer default dvips" myfile.lyx
will cause LyX to print myfile.lyx to the default printer, using dvips and 
the default print settings (which, of course, have to have been configured 
already). At present, not many commands can be used this way, but there will
be more eventually.

The following variables are obsoleted in 2.0

- \plaintext_roff_command (was not used anymore)
- \spell_command and \use_spell_lib (ispell support has been removed)


The following new LyX functions have been introduced:

- LFUN_WORD_FINDAD ("word-findadv").

- LFUN_REGEXP_MODE ("regexp-mode").

- LFUN_COPY_LABEL_AS_REF ("copy-label-as-reference").

The following LyX functions have been removed:

- LFUN_NEXT_INSET_TOGGLE (next-inset-toggle): use "inset-toggle" instead.

Known issues in version 2.0.0
-----------------------------


Caveats when upgrading from earlier versions to 2.0.x
-------------------------------------------------------




Note: There may later be an updated list of known issues online at
	http://wiki.lyx.org/LyX/ReleaseNotes

TODO
----
Somebody should create a rc2rc script...
http://www.lyx.org/trac/changeset/27531