@@ -1891,8 +1891,6 @@ void actOnUpdatedPrefs(LyXRC const & lyxrc_orig, LyXRC const & lyxrc_new)
 	case LyXRC::RC_COPIER:
 	case LyXRC::RC_CURSOR_FOLLOWS_SCROLLBAR:
 	case LyXRC::RC_SCROLL_BELOW_DOCUMENT:
-	case LyXRC::RC_CUSTOM_EXPORT_COMMAND:
-	case LyXRC::RC_CUSTOM_EXPORT_FORMAT:
 	case LyXRC::RC_DATE_INSERT_FORMAT:
 	case LyXRC::RC_DEFAULT_LANGUAGE:
 	case LyXRC::RC_GUI_LANGUAGE:
