@@ -21,6 +21,7 @@ The following variables are obsoleted in 2.0
 
 - \plaintext_roff_command (was not used anymore)
 - \spell_command and \use_spell_lib (ispell support has been removed)
+- \custom_export_command and \custom_export_format
 
 
 The following new LyX functions have been introduced:
